--- a/tor-browser.desktop.in
+++ b/tor-browser.desktop.in
@@ -6,3 +6,4 @@ Exec=/usr/bin/tor-browser %u
 Icon=tor-browser
 Categories=Network;
 Comment=Anonymous browsing using Firefox and Tor
+StartupWMClass=tor-browser
