--- a/zulip-desktop.desktop
+++ b/zulip-desktop.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Type=Application
 Name=Zulip
 Comment=Real-time team chat based on the email threading model
-Exec=electron /usr/lib/zulip-desktop/resources/app.asar
+Exec=zulip
 Icon=zulip
 Categories=Network;InstantMessaging;
 Terminal=false
