Fix fontconfig and license files

--- a/46-roboto-serif.conf
+++ b/46-roboto-serif.conf
@@ -2,7 +2,7 @@
 <!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
 <fontconfig>
   <alias>
-    <family>Serif</family>
+    <family>Roboto Serif</family>
     <default>
       <family>serif</family>
     </default>
