tweak service file a bit

--- a/agate@.service
+++ b/agate@.service
@@ -1,20 +1,20 @@
 [Unit]
-Description=Very simple server for the Gemini hypertext protocol.
-Wants=network-online.target
-After=network-online.target
+Description = Very simple server for the Gemini hypertext protocol.
+Wants = network-online.target
+After = network-online.target
 
 [Service]
-Type=simple
-User=agate
-EnvironmentFile=/etc/agate/%i
-ExecStart=/usr/bin/agate $CONTENT $CERT $ADDR $HOSTNAME $LANG $OTHERS
+Type = simple
+User = agate
+EnvironmentFile = /etc/agate/%i
+ExecStart = /usr/bin/agate $CONTENT $CERT $ADDR $HOSTNAME $LANG $OTHERS
 
-Restart=always
-RestartSec=1
+Restart = always
+RestartSec = 1
 
-StandardOutput=syslog
-StandardError=syslog
-SyslogIdentifier=gemini
+StandardOutput = journal
+StandardError = journal
+SyslogIdentifier = gemini
 
 [Install]
-WantedBy=multi-user.target
+WantedBy = multi-user.target
