--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,11 @@
 root = true
 
 [*]
-charset = utf-8
 end_of_line = lf
-indent_size = 4
-indent_style = space
+charset = utf-8
 insert_final_newline = true
 trim_trailing_whitespace = true
+
+[PKGBUILD]
+indent_size = 4
+indent_style = space
