--- a/arch_x86.config
+++ b/arch_x86.config
@@ -26,6 +26,7 @@ CONFIG_HW_RANDOM_VIRTIO=y
 CONFIG_DRM_QXL=y
 CONFIG_DRM_BOCHS=y
 CONFIG_DRM_CIRRUS_QEMU=y
+CONFIG_FB=y
 CONFIG_SND_INTEL8X0=y
 CONFIG_SND_HDA_GENERIC=y
 CONFIG_8139CP=y
