--- a/searx.ini
+++ b/searx.ini
@@ -1,33 +1,19 @@
 [uwsgi]
-http-socket = :8888
-
-# Who will run the code
 uid = searx
 gid = searx
-
-# disable logging for privacy
-disable-logging = false
-
-# Number of workers (usually CPU count)
-workers = 4
-
-# The right granted on the created socket
+env = LANG=C.UTF-8
+env = LANGUAGE=C.UTF-8
+env = LC_ALL=C.UTF-8
+env = SEARX_SETTINGS_PATH=/etc/searx/settings.yml
+logger = systemd
+disable-logging = true
 chmod-socket = 666
-
-# Plugin to use and interpretor config
 single-interpreter = true
 master = true
-plugin = python
 lazy-apps = true
+plugin = python
 enable-threads = true
-
-# Settings path for AUR package
-env = SEARX_SETTINGS_PATH=/etc/searx/settings.yml
-
-# Module to import
 module = searx.webapp
-
-# Virtualenv and python path
-#virtualenv = /usr/local/searx/searx-ve/
-#pythonpath = /usr/local/searx/
-#chdir = /usr/local/searx/searx/ 
+chmod-socket = 666
+http = :8888
+cache2 = name=searxcache,items=2000,blocks=2000,blocksize=4096,bitmap=1
