better handling original ipv6 address

--- a/thu-isatap.service
+++ b/thu-isatap.service
@@ -5,7 +5,8 @@ After=network-online.target
 
 [Service]
 User=root
-ExecStart=/usr/bin/thu-isatap
+ExecStart=/usr/bin/thu-isatap start
+ExecStop=/usr/bin/thu-isatap stop
 Type=oneshot
 
 [Install]
