--- a/PKGBUILD.in
+++ b/PKGBUILD.in
@@ -5,7 +5,7 @@ pkgver=@TREL_VER@
 pkgrel=1
 epoch=1
 pkgdesc="Documenting the Lattice ECP5 bit-stream format."
-arch=("any")
+arch=("x86_64")
 url="https://github.com/YosysHQ/prjtrellis"
 license=("")
 groups=()
@@ -19,15 +19,10 @@ conflicts=(
 	"prjtrellis-db"
 	"prjtrellis"
 )
-replaces=(
-	"prjtrellis-db-git"
-	"prjtrellis-git"
-	"prjtrellis-db"
-	"prjtrellis"
-)
+replaces=()
 source=(
-	"prjtrellis::git+https://github.com/YosysHQ/prjtrellis.git"#commit=@TREL_HASH@
-	"prjtrellis-db::git+https://github.com/YosysHQ/prjtrellis-db.git"#commit=@DB_HASH@
+	"prjtrellis::git+https://github.com/YosysHQ/prjtrellis.git#commit=@TREL_HASH@"
+	"prjtrellis-db::git+https://github.com/YosysHQ/prjtrellis-db.git#commit=@DB_HASH@"
 )
 sha256sums=(
 	"SKIP"
@@ -41,16 +36,15 @@ prepare() {
 	git config submodule.database.url "$srcdir/prjtrellis-db"
 	git submodule update
 	[ ! -d "${srcdir}/prjtrellis/libtrellis/build" ] && mkdir -p libtrellis/build
-	cd ..
+
 }
 
 build() {
 	cd "${srcdir}/prjtrellis/libtrellis"
 	cd ./build
 	cmake -G Ninja -DCMAKE_INSTALL_PREFIX=${_PREFIX} ..
-	cd ..
-	ninja -C build
-	cd ..
+	ninja
+
 }
 
 package() {
