--- a/PKGBUILD.in
+++ b/PKGBUILD.in
@@ -4,24 +4,65 @@ pkgname=nextpnr-all-nightly
 pkgver=@NPR_VER@
 pkgrel=1
 epoch=1
-pkgdesc="nextpnr portable FPGA place and route tool - all"
-arch=("any")
+pkgdesc="nextpnr portable FPGA place and route tool - all FPGA architectures"
+arch=("x86_64")
 url="https://github.com/YosysHQ/nextpnr"
 license=("custom:ISC")
 groups=()
 options=("!strip")
 depends=(
-	"nextpnr-ice40-nightly>=@NPRI_VER@"
-	"nextpnr-ecp5-nightly>=@NPRE_VER@"
-	"nextpnr-nexus-nightly>=@NPRO_VER@"
-	"nextpnr-generic-nightly>=@NPRG_VER@"
+	"yosys-nightly"
+	"prjtrellis-nightly"
+	"icestorm-nightly"
+	"prjoxide-nightly"
+	"python"
+	"boost-libs"
+	"qt5-base"
 )
-
+optdepends=()
+makedepends=("git" "gcc" "cmake" "ninja" "pkgconf" "gawk" "eigen" "boost")
 conflicts=(
 	"nextpnr-git"
+	"nextpnr-ice40-nightly"
+	"nextpnr-ecp5-nightly"
+	"nextpnr-nexus-nightly"
+	"nextpnr-generic-nightly"
+)
+replaces=()
+source=(
+	"nextpnr::git+https://github.com/YosysHQ/nextpnr.git#commit=@NPR_HASH@"
+)
+sha256sums=(
+	"SKIP"
 )
 
+_PREFIX="/usr"
+prepare() {
+	cd "${srcdir}/nextpnr"
+	[ ! -d "${srcdir}/nextpnr/build-all" ] && mkdir build-all
+}
+
+build() {
+	cd "${srcdir}/nextpnr"
+	cd build-all
+		cmake -G Ninja        \
+			-DARCH=generic,ice40,ecp5,nexus \
+			-DBUILD_PYTHON=ON \
+			-DBUILD_GUI=ON    \
+			-DCMAKE_BUILD_TYPE=RelWithDebInfo \
+			-DCMAKE_INSTALL_PREFIX=${_PREFIX} \
+			-DUSE_OPENMP=ON	\
+			..
+	ninja
+}
+
+check() {
+	cd "${srcdir}/nextpnr"
+	ninja -C build-all test
+}
 
 package() {
-	echo "nya"
+	cd "${srcdir}/nextpnr"
+	DESTDIR="${pkgdir}" PREFIX="${_PREFIX}" ninja -C build-ecp5 install
+	install -Dm644 "${srcdir}/nextpnr/COPYING" "${pkgdir}${_PREFIX}/share/licenses/nextpnr/COPYING"
 }
