--- a/PKGBUILD.in
+++ b/PKGBUILD.in
@@ -5,7 +5,7 @@ pkgver=@NPR_VER@
 pkgrel=1
 epoch=1
 pkgdesc="nextpnr portable FPGA place and route tool - for ecp5"
-arch=("any")
+arch=("x86_64")
 url="https://github.com/YosysHQ/nextpnr"
 license=("custom:ISC")
 groups=()
@@ -24,7 +24,7 @@ conflicts=(
 )
 replaces=()
 source=(
-	"nextpnr::git+https://github.com/YosysHQ/nextpnr.git"#commit=@NPR_HASH@
+	"nextpnr::git+https://github.com/YosysHQ/nextpnr.git#commit=@NPR_HASH@"
 )
 sha256sums=(
 	"SKIP"
@@ -34,7 +34,6 @@ _PREFIX="/usr"
 prepare() {
 	cd "${srcdir}/nextpnr"
 	[ ! -d "${srcdir}/nextpnr/build-ecp5" ] && mkdir build-ecp5
-	cd ..
 }
 
 build() {
@@ -48,14 +47,16 @@ build() {
 			-DCMAKE_INSTALL_PREFIX=${_PREFIX} \
 			-DUSE_OPENMP=ON	\
 			..
-	cd ..
-	ninja -C build-ecp5
-	cd ..
+	ninja
+}
+
+check() {
+	cd "${srcdir}/nextpnr"
+	ninja -C build-ecp5 test
 }
 
 package() {
 	cd "${srcdir}/nextpnr"
 	DESTDIR="${pkgdir}" PREFIX="${_PREFIX}" ninja -C build-ecp5 install
 	install -Dm644 "${srcdir}/nextpnr/COPYING" "${pkgdir}${_PREFIX}/share/licenses/nextpnr-ecp5/COPYING"
-	cd ..
 }
