--- a/PKGBUILD.in
+++ b/PKGBUILD.in
@@ -5,7 +5,7 @@ pkgver=@NPR_VER@
 pkgrel=1
 epoch=1
 pkgdesc="nextpnr portable FPGA place and route tool - generic"
-arch=("any")
+arch=("x86_64")
 url="https://github.com/YosysHQ/nextpnr"
 license=("custom:ISC")
 groups=()
@@ -23,7 +23,7 @@ conflicts=(
 )
 replaces=()
 source=(
-	"nextpnr::git+https://github.com/YosysHQ/nextpnr.git"#commit=@NPR_HASH@
+	"nextpnr::git+https://github.com/YosysHQ/nextpnr.git#commit=@NPR_HASH@"
 )
 sha256sums=(
 	"SKIP"
@@ -33,7 +33,6 @@ _PREFIX="/usr"
 prepare() {
 	cd "${srcdir}/nextpnr"
 	[ ! -d "${srcdir}/nextpnr/build-generic" ] && mkdir build-generic
-	cd ..
 }
 
 build() {
@@ -47,14 +46,16 @@ build() {
 			-DCMAKE_INSTALL_PREFIX=${_PREFIX} \
 			-DUSE_OPENMP=ON	\
 			..
-	cd ..
-	ninja -C build-generic
-	cd ..
+	ninja
+}
+
+check() {
+	cd "${srcdir}/nextpnr"
+	ninja -C build-generic test
 }
 
 package() {
 	cd "${srcdir}/nextpnr"
 	DESTDIR="${pkgdir}" PREFIX="${_PREFIX}" ninja -C build-generic install
 	install -Dm644 "${srcdir}/nextpnr/COPYING" "${pkgdir}${_PREFIX}/share/licenses/nextpnr-generic/COPYING"
-	cd ..
 }
