--- a/PKGBUILD.in
+++ b/PKGBUILD.in
@@ -2,7 +2,7 @@
 
 pkgname=nextpnr-ice40-nightly
 pkgver=@NPR_VER@
-pkgrel=1
+pkgrel=2
 epoch=1
 pkgdesc="nextpnr portable FPGA place and route tool - for ice40"
 arch=("any")
@@ -48,9 +48,7 @@ build() {
 			-DCMAKE_INSTALL_PREFIX=${_PREFIX} \
 			-DUSE_OPENMP=ON	\
 			..
-	cd ..
-	ninja -C build-ice40
-	cd ..
+	ninja
 }
 
 package() {
