--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 *
 !.gitignore
-!PKGBUILD
-!vscodium.desktop
-!build_sh.patch
 !.SRCINFO
 !BUILDING
+!PKGBUILD
+!vscodium-uri-handler.desktop
+!vscodium.desktop
