Allow auto update tracker

--- a/aria2.conf
+++ b/aria2.conf
@@ -42,8 +42,8 @@ save-session=${HOME}/.config/aria2/aria2.session
 ## Input File
 input-file=${HOME}/.config/aria2/aria2.session
 ## DHT File
-#dht-file-path=${HOME}/.cache/aria2/dht.dat
+dht-file-path=${HOME}/.cache/aria2/dht.dat
 ## DHT 6 File
-#dht-file-path6=${HOME}/.cache/aria2/dht6.dat
+dht-file-path6=${HOME}/.cache/aria2/dht6.dat
 ## BT Trackers
-#bt-tracker=
+bt-tracker=
