--- a/mcreator.desktop
+++ b/mcreator.desktop
@@ -4,8 +4,8 @@ Type=Application
 Name=MCreator
 Comment=Make Minecraft Java Edition mods, Bedrock Edition Add-Ons, and data packs using visual graphical programming or integrated IDE
 Categories=Development;
-Keywords=MCreator;minecraft;mods;
-Exec=/bin/bash -c "cd /opt/mcreator/ && ./mcreator.sh"
+Keywords=mcreator;minecraft;mc;mods;
+Exec=/usr/bin/env bash -c "/opt/mcreator/mcreator.sh"
 Icon=/opt/mcreator/icon.png
 Terminal=false
 StartupNotify=true
