--- a/mcbelauncher.desktop
+++ b/mcbelauncher.desktop
@@ -1,11 +1,20 @@
 [Desktop Entry]
-Type=Application
-Name=Minecraft Bedrock Launcher
-MimeType=
-Icon=/usr/share/pixmaps/mcbe.png
+Categories=Game;
+Comment[en_US]=Bedrock Launcher for Linux
 Comment=Bedrock Launcher for Linux
 Exec=/usr/bin/mcbelauncher
-Categories=Game;
-Path=.local/share/mcpelauncher/minecraftpe
-Terminal=false
+GenericName[en_US]=Bedrock Launcher for Linux
+GenericName=Bedrock Launcher for Linux
+Icon=/usr/share/pixmaps/mcbe.png
+MimeType=
+Name[en_US]=Minecraft Bedrock Launcher
+Name=Minecraft Bedrock Launcher
+Path=~/.local/share/mcpelauncher/minecraftpe
 StartupNotify=false
+Terminal=false
+TerminalOptions=
+Type=Application
+X-DBUS-ServiceName=
+X-DBUS-StartupType=
+X-KDE-SubstituteUID=false
+X-KDE-Username=
