--- a/aria2@.service
+++ b/aria2@.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Aria2c Daemon for %i
-Requires=network.target
 After=network-online.target
+Wants=network-online.target
 
 [Service]
 Type=forking
